fix: scrollbar on some mobile device cannot scroll

--- a/app/assets/stylesheets/components/chatroom.scss
+++ b/app/assets/stylesheets/components/chatroom.scss
@@ -1,6 +1,6 @@
-.message-list-container::-webkit-scrollbar-thumb {
+/*.message-list-container::-webkit-scrollbar-thumb {
   width: 7px;
-  background-color: #7c7c7c;
+  background-color: #aaa;
   border-radius: 8px;
 }
 
@@ -11,5 +11,6 @@
 }
 
 .message-list-container::-webkit-scrollbar-thumb:hover {
-  background-color: #aaa;
+  background-color: #7c7c7c;
 }
+*/
